--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,66 +1,66 @@
-#ENC[AES256_GCM,data:1gtTf9bt37RgF6CA,iv:aLN3eK88cnEQt4jHPMnLnMEfHvbb+pTiL2zmN0niAu4=,tag:PEtDdG5Ty2VEbQJZX0Z4/A==,type:comment]
-PROXMOX_IP: ENC[AES256_GCM,data:Sjmk3XmligfrIlo=,iv:gkg0mpEFFtAsrzx1kMLr1lvI0IDlLJ426QNhjjjIm6k=,tag:GXWH0i6J0wNDk0+q+EFt9A==,type:str]
-VIP: ENC[AES256_GCM,data:NGyWABl9FalsB+0=,iv:nn4LNHY1nCic5iGF49JwT1KLM19Xi3NDlzV6SjN0u58=,tag:nyMeraKiVcjDKzyNgoFYhA==,type:str]
-MASTER1IP: ENC[AES256_GCM,data:8yL6PgKTGLeblUI=,iv:9ovHHAm0/+LQvP8evZKLJaUjjkxgQpJHmEufOhDJzfc=,tag:0pk7033X5Julbi9cUDoTRw==,type:str]
-GATEWAY: ENC[AES256_GCM,data:nMpFz5kBb3V5JA==,iv:fyjVXl93z+eb+XXxRbq/JGx7ZTbF2hKsfNakAEYsX7k=,tag:100wQOh9h41TUAoAmg6+lQ==,type:str]
-#ENC[AES256_GCM,data:rgsH4V/smW4kkx2O0MG9,iv:YCKEPTqgbm5NamNFdE0YVzvw3mfLwRStjFG+fwKvLyk=,tag:mKOue0eI/H0qofGvFyECVg==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:rR23a0zZzTRxSI6XkRj4jXofd0cNjE6rSg==,iv:t3/2jpZUmJft9lXq/YWbns8j7alKjhudmtehwc4oUCE=,tag:5ZStgbjAIFmWaRu7Y7K3kg==,type:str]
-#ENC[AES256_GCM,data:WN+dqtKovTCtRtZvUZMzGwf+vYSGVqvk9Q==,iv:dk4A+jBPmSR7MJo/Xi7W69DAj9lpGvxEemR99duEEu8=,tag:TwSpaXVY8a29sXuJWD+b4A==,type:comment]
-NGINX_INTERNAL_IP: ENC[AES256_GCM,data:IO6zcnwmCuYaiW6/,iv:kjMIn+Q8aWSeYqkDnb+6iudARgid2eMIynqOX3aauig=,tag:c5D93XoZ/XQkjafuee8FDg==,type:str]
-NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:dH0lv1RuxVLMxELo,iv:QOnnpuXRcukIu2MLENSkeCs8A09Mkm+Rn2IlZdaOTz8=,tag:pn42tQjehiMwmSD/M0WJpQ==,type:str]
-IP_WHITELIST: ENC[AES256_GCM,data:zpHJxZTygRca8jmgYwNgBkpYzOloBodmOOE=,iv:nEoKd2ru6naBNtuTmQ7Fa5Z1eTV0OSODx1Z31Mgqc0I=,tag:joYosWa5dHLElCTX7Dksrg==,type:str]
-BLOCKY_IP: ENC[AES256_GCM,data:EuSMSb22ENvPkVrU,iv:m38BEEhzxZj+JvQVvTBSd1S2s/WKGIzukxUIOiQ47f4=,tag:FRxeQlnmYz+jDhemZKKYtg==,type:str]
-DASHBOARD_IP: ENC[AES256_GCM,data:PKc2sCm6BYY66biI,iv:sDmrHrfuMnqNitlizKTsstsnQKLYZpeooA9MuGaxMC4=,tag:z6UYpMDFyp/4hXxhPwfNXw==,type:str]
-WG_EASY_IP: ENC[AES256_GCM,data:A11bie/6rXsPcEl2,iv:s+41+52pgiiSOdHo6Sea2DOG8K7hTWLhoTeVcBC9IN4=,tag:Cu36JJkf9HzxiEjEHTonqA==,type:str]
-MINECRAFT_IP: ENC[AES256_GCM,data:cZOMr4of/Dbsz/r6,iv:mYU46CVII1f5O1zOuG1SNPJ42SZXJLFugagcGqdjNyw=,tag:rNzO3T5HCl+Nbhyb3WFXhA==,type:str]
-#ENC[AES256_GCM,data:TN4P02cT87MOo8C+8iaZpLum,iv:+mlWLNSN/EwP/DCcpnUHRTtDxOxK7T/WXNTvdttUh6Y=,tag:moA7u4Xtz5xL9FFJaNJCJg==,type:comment]
-BOREALIS_IP: ENC[AES256_GCM,data:kSPxIZd9Nos1npI=,iv:lpoxW0cHoJE5pURLLSVQ74+VCjxl9lrohzjRgqkfBH0=,tag:OoqABxj6X4bAxV/+2jKRug==,type:str]
-#ENC[AES256_GCM,data:njp+iJqfJe+3NrHpIfcW+A==,iv:aQ7kg6bffHqEPViEgTPJVFJKpOMUJo5iTkNxvt05ejE=,tag:kdlCAE8InTgaoS9LPvwcCw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:cOV0IbWviVGZrqiucA==,iv:39n6G25iDxbKev7fMvR3lZPgja5FeglfPu0pTpFB55M=,tag:DxZ0HlMxERi0I5muft+VUQ==,type:str]
-DDNS_URL: ENC[AES256_GCM,data:wbuI/wBVEHFlRYwlvSUGK0wdqaU=,iv:zNUmtDH7kyc8FTt36UDAeFCq5Jo98eCoMAZWcF4amR4=,tag:PGXiBbSdnY1StEqrV1w1Dg==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:CnxK+HKn3FK9qT5OLA5F52+4lw==,iv:o29mxUQKtvhr9JlXjwOUT0TX4MnM6Ol55Hj+wHnPi74=,tag:AXiL3nBqm87vV/fWm4vLCg==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:Phcy+EpjGHLHMAFqjJaTGfwyc+gQun4lLGZQ7QOZCjSfYYDoHHJjNw==,iv:2bxlow/GWJD8/dfcPuE36JHrRZi2QdINWmaqmhDwiMQ=,tag:FKJ1XNrleb4ClTTEB4hLLQ==,type:str]
-ZONE_ID: ENC[AES256_GCM,data:fp4BFh1Gs7zl70sy+q4I43zQ2RrD1D+Jm8s6OWbnvgs=,iv:sqmJPQsLFPaaOjR3Nk76xw5bzG1yyp8LBaP3NJ4tatY=,tag:ImU0qhyHWr1uiydN3Qxspg==,type:str]
-#ENC[AES256_GCM,data:ozGrHYk+zn0=,iv:9Ix/Gweeu3UWu+4Zz612qF6qBFyz5eP6ClD4KOeCURE=,tag:3C23gcPhuUs2oiDThdw9OQ==,type:comment]
-GF_ADMIN: ENC[AES256_GCM,data:v7CA1G56BLoW,iv:xtge2ACILrILFm4Be+jDO7NoXFGCmMYPbz+VDLzuoas=,tag:noqfbIAEJGwUOBwcIOS9MA==,type:str]
-GF_PWD: ENC[AES256_GCM,data:6M3qWuJK4EIb9g2cqiCzzd8yDtU627yd,iv:BE7Tf/CHpcy7rKy2dDZYWQ5uYicFYyGpr70vC5oYnEo=,tag:YUrBd8sVUUJCHzpDJAlpNg==,type:str]
-#ENC[AES256_GCM,data:PZD+ESixMlCudA==,iv:yvEksvWzLVfSVVyN5U3TRB2ESW9s4u7YkhkEeDd+6W0=,tag:riNUkCEJk0562bynSq5a7Q==,type:comment]
-NEXTCLOUD_USER: ENC[AES256_GCM,data:gUKnl7s+ZEAA,iv:yLspF6DjJVk+QjbGrFWeOiKpWN0kL9GhzBkI29B56yg=,tag:Jnn/kSoECNCKyr+WdUIavg==,type:str]
-NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:+6Dm/xzaUHVEgT01wVy5I+sXJZE=,iv:Ee02DFs9RIKefyMTFPoY6ooImOXfuZfB9D44cd5ypNw=,tag:Ws3uvUe41LibpJgAl/WHag==,type:str]
-NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:5ZRWcP41RXwBVWPfxchyn6tQoLsIcedj,iv:64SQByT/Haohm5mjDRR5+0ZBymEpajZIDxhiMC5GY+4=,tag:W4cSo/oQyze7mTE/sHtYUg==,type:str]
-MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:gpqVuzm1RbmqoUpSc8s31Xwp9A==,iv:4Hs/pbmUsjAF0dP+L2XOb/mCAY1xeaPunaXvrNdc84s=,tag:mantPf8/kmGx7qewq0sySg==,type:str]
-SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:lvDw4sNQbS8jJFNcb2+HvEX7,iv:jxo+3OiZDkURVXQXxhYBa0t1GN7unIiGoR7zAnom0E4=,tag:E6A1T+Zi7tIRxRlPBaAzwA==,type:str]
-SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:sQN0taTUiACMXZYxEHha7kzQdPkzKXg=,iv:iqqfPtSuprCU21Nqw51tItb19PY2zSQRG/Rxq9yxg6Y=,tag:q1s99vs99V/MlYkyPsp3yg==,type:str]
-HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:8haRdNQNE4mk67kVRfC+3RCsjBXTctTp,iv:gBspF8QrIw+KRbtZAWRCF8Dn61ogvbC3PAj0VRtNdTM=,tag:AxHr/ukuk5Ljhu5mvwBY7A==,type:str]
-SEARXNG_NFS_PATH: ENC[AES256_GCM,data:zbMD4U6boh8P5kkRHXuVB87hMpAHE0kD,iv:INymSM0EEWoBo6lbXin6ZkL9YXUdmIIlvlAPY48gm5E=,tag:e9UqtoCnem7/Ryaje7/lfQ==,type:str]
-#ENC[AES256_GCM,data:Sq4zICmj254A9MR6ReOrwMw=,iv:Ig8jc2EvtfxQTtOVe1hBOq6PFl45v/IxKe43jD4xl0M=,tag:dEuLDmEjbE922ZoPr0Nc5g==,type:comment]
-METUBE_NFS_PATH: ENC[AES256_GCM,data:XhojMOqFZ13KumAGl7LlfXiSq+D4cIwvw78=,iv:dU99GH4qji98BXAGe9TN2Mw/nhx0ohCOBuUL7VHgmx8=,tag:XqjUr2+veZ2Wp4yeFQB+tQ==,type:str]
-VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:BKbZOMlCal8ypIpIv8vXRkfLLvGDYGkSUjzNNSAaS1vOBpxrcG31,iv:pmofNwWzyVUkMagwEt7XsM+smp3iSEEAJjA20VD7gQ8=,tag:1VPLxiBnQ808AvAmPc4tAQ==,type:str]
-OZRATES_NFS_PATH: ENC[AES256_GCM,data:sjvhlVyrE6w+hZJ8c8K9OxQ2XxBShr+CCxwKaf4=,iv:OceihUHrDC4GO7ynmqA5/h2cvPVUGRlwEGiOFYo83bs=,tag:8JUUR6t4/7EYaBroHT3OKw==,type:str]
-FRIGATE_NFS_PATH: ENC[AES256_GCM,data:KTNjB5SfDe/jzinVxi4LHM74OItQVa4=,iv:FWgz2O9yPNwN7SwKBcdjrw66m78Zbc4EYQs3wEkBgLY=,tag:W5PXT0SRjS1jg5vSBwxOhg==,type:str]
-#ENC[AES256_GCM,data:ICQ2pl8H4qeW7rQkNhSN6QF7KPvL2u13hHuAWgT1gKPKqY1+RQnv1FvqlCXeOlZKooY5XoectjA=,iv:7/WvfQg+qKoFFVrkYUYsCsPZYUqE7cpYipbpkjMLLDk=,tag:TWqDPylW4RH0Tsngi1YpIw==,type:comment]
-#ENC[AES256_GCM,data:uZUsfy24MRLz9DW0ynsyisGpQLuBy2tY5w==,iv:T0E3pTweP0tOwCe543hdV/8JV4fewHYpWcDGgcAkP0Q=,tag:QSRiPmkyUh2/+8+mInkDyQ==,type:comment]
-#ENC[AES256_GCM,data:B2f1Dl9M3XEnkTQzDjuXz0Uhxw06V7SbPvPB7EHrQsvMdV/bB+PLd86srIxvK9UMMQ6elrRpPeSi6EndHwVBh/sv3MtvXUBVvBAGWlI=,iv:cG0o7+bYZIrWvdAjpZlapPOc/B/mHz5wJFlhvMrYZZQ=,tag:XASpcVcf2O/WgZfcfhQckA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:6vhg+4d5uDyooNELJ8BudkqB2bLHqSa/SiD67EyHD0f8hRmlUcilh2Us0A==,iv:+ppGpwTL8hy4jouNTcQHrryByRsd5wUeYVDBm76sCsQ=,tag:qlr7PRgxJm4XOXIL5kQKng==,type:str]
-#ENC[AES256_GCM,data:kw7cEEo+c5Pi97Hb9dPoXE19S4OgWHNip1NmbpfjkQWfwWyc3pAKizSh2fbzzbwk5drTdjNW2El98l/ynmiXVa2KZCAjeXE=,iv:09Bt1T3Tlrs2Lry7j79HohKZVRdMlCQNMtY/n1FEZIA=,tag:a/1qzwDzeMmTIZ0xGiSDqQ==,type:comment]
-#ENC[AES256_GCM,data:pGAnXw+MwcRDAciVf2ACIb7HtteYNgQTmDRP850T61krIwqjq20SI7G5ouwOurwtr49iQOdF,iv:aJjY5CYMWjk+A3fOpyt+pftVmNlalshZAHKCD52udtA=,tag:mEW34RxFaMLgF3zJGkuj8g==,type:comment]
-#ENC[AES256_GCM,data:ZKZjCh3FtD22k71lT1ZR/2OsrBYe4qVvXFv8beuc0/OIiSg=,iv:PVfZWNZm+7QKPS17PBxDwjSMxh6jgfwJT+WTiEcU3wk=,tag:enKfI5pEMEFQmFOPGdEzNw==,type:comment]
-#ENC[AES256_GCM,data:chr/X/TMTW/uF4s9+LjKjvDHME7zqJxv7EvCs+M8iPACBJCFCDHn,iv:J83dMutCQmbsGvt92Ib4g/6EW9rnjRXAOv1rX3wb3wA=,tag:bdzQUld3xY70xuzGU1/Q6Q==,type:comment]
-#ENC[AES256_GCM,data:wSwfLTauItpMcUVaP54=,iv:+FW+m0RQhyXzUSB6xtQFZCaTD5/IwkxM7VXPecHNCh4=,tag:xif3IY5BHy2dyyEI5MpGEA==,type:comment]
-PODNET: ENC[AES256_GCM,data:kdIWoxQHELEJxpqRGg==,iv:YRsz4wko3X4GegZd2fr3PvDgH9YYhoib/SpJVqwSgtA=,tag:HaFcDI7sgCCAV16OMPItvA==,type:str]
-SVCNET: ENC[AES256_GCM,data:cuG/3stFfinaphjLVg==,iv:afZ1lI2QyhZNiuOrMyS+iC6TCPuZaw7QdsgokQHaaRQ=,tag:gV5d0SNUXu/mAS1IgMaubQ==,type:str]
+#ENC[AES256_GCM,data:on7Y+aHgYXH/WYae,iv:ZXMpFEVtk+Q1hQILbkHWzTlkIDQvC07M1xfTFdSmktI=,tag:td1a3LQfgVZq60VpArFR0g==,type:comment]
+PROXMOX_IP: ENC[AES256_GCM,data:Aar6BPWlnIoxXT0=,iv:mBH0o/p+0oGUNsWYNGD5+okmANOutGTDJmpPhXfKvyE=,tag:p9dN3D0jXM4B14mRTaPZsA==,type:str]
+VIP: ENC[AES256_GCM,data:dkPXLqA6jktDJJk=,iv:f0RxqJYaI8JBY4TWQxXEl+j/Ytc4EeYYh+VpnXQAH0U=,tag:c7YG9LtBdR/OHDB62C8PTw==,type:str]
+MASTER1IP: ENC[AES256_GCM,data:nF/lHRc8u6WxuQQ=,iv:RirBbwJJaLyyWOxh0136v0WMG9BoAW9qgMGTi7pezT4=,tag:BX2Uf+d2YlwHL6tgHbKMPw==,type:str]
+GATEWAY: ENC[AES256_GCM,data:I3nsxXEE5Ugpxg==,iv:dndLlFGPGgi1OWDUCneg2Rk7nmMtf6vswIhTNy7nTSw=,tag:ucS+ZhjhhoyZ7txGi0fMSQ==,type:str]
+#ENC[AES256_GCM,data:lf9O6SrgGlg52SAzku3J,iv:HLqmM1b0ofyWAYyRJGyVa/BqyRTZoRNUI4/eWyCq+7k=,tag:5H/y0jzDogg/EKgQyk9iTA==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:RboHTIrcf6EzB7xPzgOAPPltY/T8dfUULQ==,iv:ERg8lJG6O001rk21LGMrB44f0PXlvuUQLQNorbMPlkA=,tag:Ii16VcJNr74G8QwObMicPw==,type:str]
+#ENC[AES256_GCM,data:WWBxWePhGyE5g+WnpxJg8BoXKxkQDg6ppg==,iv:kGhgGSADz1pLJCGNndiHsbjxcF7rCY+s7T8sMAsDFrE=,tag:KIieJxKfqBRCWkzDnHZvaw==,type:comment]
+NGINX_INTERNAL_IP: ENC[AES256_GCM,data:MEOb5miBfK0smkNX,iv:9XxBi91nXTtw4PegCp9XI1xuXUDRaSjjw9zMUq9mIdw=,tag:knRvVSC/ZHlOD6ODg+lmdw==,type:str]
+NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:ObqBTibXir44VEYM,iv:rEG4gkIbsOCzKbGorPHS102n7RTmbB+jThpC5ccd3/E=,tag:rlU/+GT6CozC4NjE+rlhbg==,type:str]
+IP_WHITELIST: ENC[AES256_GCM,data:mHhDrkf/aPo6t6bQb8tDyRiB0AOu1qBKbBg=,iv:KVKm4wwL1vZzPiwU8CM9DTjyetAw4MFAXgL5XAyHS4w=,tag:oq+zSwvBA/26b9wD5OinGg==,type:str]
+BLOCKY_IP: ENC[AES256_GCM,data:uaBKVTe7Qy7e4haS,iv:tTQzjMJH4nrF6lWnqgyAiDvlzoGk5x2oSX36WUBTcc4=,tag:9OfiTnolvX3TobLjneYyag==,type:str]
+DASHBOARD_IP: ENC[AES256_GCM,data:ZNAoBl61ZBObBz1P,iv:2yotyfxmlu4K5QGCZj6wR+D1W42PYcp1pNj/iqyYjis=,tag:0Hl8EDlRkCD9K4qRtwPfhg==,type:str]
+WG_EASY_IP: ENC[AES256_GCM,data:yCHECq+1gqEHzo6B,iv:QwWeBj1wochIV/I81JRAGlFKn3+g8NIEb59IFkyw1kM=,tag:bvHsUM8yHsOLpG2xUXyBTQ==,type:str]
+MINECRAFT_IP: ENC[AES256_GCM,data:eQ/wctch4kjirAkJ,iv:w3M1JY/16RAkTO/nEbdKV6/IF4mY1YCUqpytyr0u+9I=,tag:Kh9k3bNsg0kuzov/lOwYQw==,type:str]
+#ENC[AES256_GCM,data:iC6JDDFLaf1f1rKkoLMfUX/k,iv:6NS7q/44jPP5c84usKek7Lduz3KLT9rhnF5+z/SdbNk=,tag:rc7E8wpX2j2mMoPKY/R8Qw==,type:comment]
+BOREALIS_IP: ENC[AES256_GCM,data:V6a8dbc/ZmJZkCQ=,iv:O8e7t+7x+8uT6bX09Ic6ATFSpbc5FCKVlgBiOM3hyqQ=,tag:DTVvN1I0c1AurMPxpafUXw==,type:str]
+#ENC[AES256_GCM,data:oulFP0GBCoHJyhiKxB5VyA==,iv:3lISUQPKBJjBU6YfoUaTluf8uojVS+nO57/dVgs2/2Q=,tag:nUii6xrdp2dLcwEctv5K9Q==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:37t6EeGyqn8knmclwA==,iv:0wM/bUX51NtAtKOJifTo9vEO2NDLT7NdJiGuzJGP8iI=,tag:iuYVclQux+9yw0SvjADjOw==,type:str]
+DDNS_URL: ENC[AES256_GCM,data:evSL75qqf3XvS7uCoyvoGzxYAco=,iv:EyTVx73X2t6SXV+bIO0RPInYLw+tXcxvpwGCFMeHq84=,tag:u4US+CNpls3Nyxd1oyy5+g==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:/Vtaw71wi/dxqzB2PN2Y3H6m2w==,iv:4l9Jdk2BIixf1GtYd1XoVP9oma/7i2DrYLiHXzW4jx0=,tag:wAtIVz/Qrw5GjOYAbZYQAg==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:lTgb7zfj62+xE0bCrJz7rpF7HxgcWzLKMjKiE5kL3+WL6OgXQYoK7A==,iv:LIOpNdId8k4R6oig8+rrZnOnqGLEX/7SJ5EDhIWkzAs=,tag:82KxqYoSkq8JiFLvUOv/4g==,type:str]
+ZONE_ID: ENC[AES256_GCM,data:0hxSRL+NpHuTNpc1CpC8fB2ZlBKfcFn/nlet4Lw3Kr4=,iv:qIq14KuQqdpcAfzHLABF9DsDxyVRTroqmnnE1dcvaMw=,tag:x2uv+ZkwGEAV7W/kaMRTIA==,type:str]
+#ENC[AES256_GCM,data:erFcw1RISOM=,iv:FPr6/VgFAcl+7mjvWHLuJvZx2gvfuFTFsFjgWnQ4oJ4=,tag:blYQ/alxLYaE8l0bgSlW2g==,type:comment]
+GF_ADMIN: ENC[AES256_GCM,data:eXZwnhEVEAxi,iv:v90zcVQ+QLLv46IN8WD1wRDWbI+Kzh+rQO6nXBL3vB4=,tag:VTzXlpfQBQIGGn+Yg0s4bA==,type:str]
+GF_PWD: ENC[AES256_GCM,data:7Mx6L2Hs0t3WzsUHHfPb3/eS+VO4ZJBg,iv:BSGGz8pzGITusjDdiPwwiz0tau9dCCGIOF7G/YM4wBY=,tag:IqcupgcDN0tLAAtYj7QO8A==,type:str]
+#ENC[AES256_GCM,data:sHQtVTfH2RyCEg==,iv:6bkxgE2oKKB5aKCHyllSc4ltO5Ooc/B8wXEqJWit65A=,tag:wmX0bO8MDulzPH3UyV3dDg==,type:comment]
+NEXTCLOUD_USER: ENC[AES256_GCM,data:PovRGnwkNVgM,iv:T7ym72xrxSx8Nbt0tbAub+imCs3+zIupjHA87GEEGOI=,tag:MiBFJsBcFIAjG09oRJG3PQ==,type:str]
+NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:kB+eAEeFiMJ9Y1W893BH7L6usZE=,iv:FCyk7z2EXmd1ZFgq2/mWVMt9xiyQkCLTd8bO2RdvFaI=,tag:++ZfNYSpk1bHVXD46psjRQ==,type:str]
+NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:WgA0HIAR1EFSetU4tAvEGqNmQIxXBjHV,iv:r07Emxm9HKbY+5o7JyBsoQvdkOvtfhcP+s7pC7gIEeU=,tag:r/B4kS1D+PPuTbJ4JUkLTg==,type:str]
+MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:xRtLz5m6iogsSfDKNdQXtq6DVA==,iv:qO0E24c0+2uaz3Xr31YiJ98e5alGmGfrUJ9wQy++7aw=,tag:g52jWSaXwhXMdysaOt2vsw==,type:str]
+SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:evP/9gnxrnGmAGtrMv+VAL7L,iv:E7WYcVo+nT0V3x7ynikm6DGFpHVCDiB3l422/flDfHc=,tag:h2Dias0QsKzalWc2deEnHw==,type:str]
+SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:TceXKPuHlLPS454wZd5P5qcUQOcfQiA=,iv:Mr1pQWdbP1o5L49XI7TQQZXpnOj+rc6blbysCoQT2CU=,tag:KnwQG6VEDTyV9eaBrYeUAw==,type:str]
+HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:/wC+kW+fLNUaQqXI3kuptFJFO+b/467i,iv:zyG8350kLpTVxnO1TWwJb3WwmXfnk8iA7kIA9DeEpLY=,tag:JOCjiZn/pn0AoDV1wWrKNA==,type:str]
+SEARXNG_NFS_PATH: ENC[AES256_GCM,data:BHUxXyoqozDoYIepdbf94jnbnRA1M9i9,iv:mxTk9zPzEtg5WiBvNvPsoATRWVroQUNrNsmSMJAtxZU=,tag:HZ/I3rvydAhmD0zVWX1BsQ==,type:str]
+#ENC[AES256_GCM,data:aKBleI/ehAYvWCHYGqful7E=,iv:wmPpb5wSooFnMTYQfhjKt2etLWuT9eBGxUTBbU2Z0Og=,tag:ZBHIHLt1KVI67xm7+vGYyA==,type:comment]
+METUBE_NFS_PATH: ENC[AES256_GCM,data:L+l52IHFHSdTbBlUCNY84jdSVmwn39feFKk=,iv:YMsOvc6TtXCtP0o85p7N8Cyl9XikNaQvzJGpYzKpjSs=,tag:BOEAuU4GlHXM4cyi/9w8SQ==,type:str]
+VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:L93JNsipwDiHBdJ27/eqOaVwUfnCWa6bRDUnW4Ca6NLONHxw1gYe,iv:tam1Zjh2hy69C4tNe8qq4gKs3m5tLMJhIylHEARLXuw=,tag:qRtCUMzKbZWtvaVstBT0fw==,type:str]
+OZRATES_NFS_PATH: ENC[AES256_GCM,data:VNoKEqxfvnwAZvIdXcLLPcwlT8xyn6Dfk4Cpigw=,iv:BBA/tT7AMqpqsxKyKdrWypk9SbRskyUx3XNcqZCe7Gc=,tag:G7/wrt2Ul7Tbu7bKXUZcLQ==,type:str]
+FRIGATE_NFS_PATH: ENC[AES256_GCM,data:tEwQg9d92bdOiyuT1quyFl8IZhHIdY0=,iv:j8xTEKSLt7FiUM1gNn+CBNJy+oMz2ZvcH7/QznWiWdA=,tag:5FkoWr5V8nUGZUjV0IqflA==,type:str]
+#ENC[AES256_GCM,data:ouxO0Bg3BaOmHaKqf6QgN34+SoHIGOJt30kKGzkzDXrxM1EsypBY8m/KedmoJUtB7gqyvUdsMao=,iv:hWkCfjvMu9SLZkA83dzAQTPlDH+ttvaBJffkxmXieXE=,tag:TQGTWpBgKBp9fsfnNSEcvA==,type:comment]
+#ENC[AES256_GCM,data:s7GDAqRm8z3yaAIoGTvzLcWSyc5ofuGh/A==,iv:yzLX0wbCAqE3LdOupfKb31Whj/gG9404dxTDo6XapMQ=,tag:Sn3iQiW+imiCFrFse5br9A==,type:comment]
+#ENC[AES256_GCM,data:rNBGLave6KtO3LPkYXptG/iOUy8FGTiLaJsTepYzNiEbEH4yX+jl35ZpomgHN8z087y5Cy80hibVOneSrXhj99U9slN23KdcbFZ+0iQ=,iv:CIlmMD4NrN84WYvm9P0Hsx58OtNtIi1e3Ru8IBhtZF4=,tag:4wX7bU0BhhnLSEg5OJ+O3Q==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:kP7LUxoBqTpTZcE/c3WJNhQ88BNOtFeY2TvkFJFYdO6kOzLKlZwKuqMcvg==,iv:oX4syCRCN+TM9AtJp+fnaUBa9AH3AHiGvAmjRPmTzps=,tag:cSH+8fTvWSkq29w0qVEvPw==,type:str]
+#ENC[AES256_GCM,data:3Ph41USsQvSlEsz0eN5Vvj29KY3oSB9zLAfPaX8+FldTHcHXuqztdfAz5ZkfEhDjIsQ3Tusz93cuuyZpdR2/ILOZk/NwsQ0=,iv:yzVPn74gUt3mmoL3RmJYkB1twD/RXIgOdAYrvwzj9Jg=,tag:vrIpFHi5rVzvuaDcnYC2hg==,type:comment]
+#ENC[AES256_GCM,data:qZ1KJgdiWCiImU6gjJYVu2oe7UW8y1ek8jjx5jgIYJZVI7jtCQA+HOI76zbH3XVKLuxxbOky,iv:vjjnQjwMNmwXRri3wXdaGxjQaFZCZuKcZYJSIPeR2yw=,tag:Hh5Mu6ADXGSH0wjoBtavtA==,type:comment]
+#ENC[AES256_GCM,data:mpzhpVx6jM51nsn+NCA5A+f/VWvqiKbxLoS78tRkfFlYTYQ=,iv:n8+6mxkLBnx0dB1e6c/wKjnMFVkUcRXqe5iCROhpTmw=,tag:7/ygIQrvgsUJAR+NGLWnkA==,type:comment]
+#ENC[AES256_GCM,data:g8pRiNbpd1EKc3pbE/4CAfPZyEHG6BunTZB48ahP2JP2AgEyLtIB,iv:sXxdKudyXUPTYbsG61Qrs2IqcGxu3aR/43taJwfTTTw=,tag:stkZICD3A7k+CqN/ged9DA==,type:comment]
+#ENC[AES256_GCM,data:5WigmNwO0wA7fsrTagk=,iv:R47YsveDlaWWjmO1rjX2r1EG6PZTD9ksr+18oHRaUkg=,tag:IUj2mCANZ6+9GwDBVatlDA==,type:comment]
+PODNET: ENC[AES256_GCM,data:pxu4ChWfjnWrMg1JLA==,iv:C/WBdtO5JBpitHxiqs20HOom+N37XhJlJT7NooVupxA=,tag:3yh3I+K9DRiO2egLHXajJw==,type:str]
+SVCNET: ENC[AES256_GCM,data:73mSvFfjOXE2EKk+Hg==,iv:pwE2suRhpWRZChCwsllNSXwuYVsjZI/RjbPwo8HT/a4=,tag:0vjH1EEF26L3fvt09hI2Pw==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4aFlodmxnYkpHVkdYSnpE
-            Q1Z2QWIxV2pYVTlBRGxiYld4bHBrbjNRN1RnCkM4cTMvNGtzN0N3OGVBMXJwZ1By
-            aCsrQTc0TXR4OFBYR29ucE1lT0lDZU0KLS0tIGRyWlI2VEthWHRpY096TGE0R1o3
-            NzVHKzhJR0tnbWxaa2tkSGF0NithVWcKKcYxuVPURkXLoeU5Jf68M1JcORtBATur
-            6eUInHsVHUNRIwaHCW1othjTi8+siR7/oF76jdWuAryMhAV3vFKLvw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBJbDRkcG5rSTlFWWFpb244
+            WXZPbzJCVWMrUTc0UGxvQzhyQ0kyaUQyRjA4Ckx6aTI4OGE3UFk4b2FwOHIzZW85
+            bk5PR0JrZXhxNGdiZjQ5Wm9RaGhuaFUKLS0tIFVXZTJDZmQ5Nkl4eWNxVHlJNm5J
+            d2NNb2ZPbkNTS3F1Y3MzQnRaMmFJbkUKcVx0uliImHkIy+HuAaA09NNHKRLZ4qe/
+            4rb6wq6QcVJAPwmFelUo/yN9JXwdPLan0dlyqTJYaPHzBl+MSEfflQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-28T20:49:51Z"
-    mac: ENC[AES256_GCM,data:jIWZRZ6eXk7mt+RtR6I1v1GiDQWomI8Aesbxw6C5tY6XDEddT61+TSCKOvo/PaQqvd8U1AsVGro+Cn8NBomKG+p6ZbyrMePQmnVM2b1StxUhp+TfrNHyRIn1J4sODDyu1wR0FJEf+uKX7K+2x0GRklRg5g4fjrpRfkBqzdkH6v4=,iv:KKPg7ZF9lyC4EZLTNzw/yTksCNm2sjboVAtdQPPqr2M=,tag:nzZcqfeojOhwI9Wq2advIw==,type:str]
+    lastmodified: "2026-01-28T20:55:32Z"
+    mac: ENC[AES256_GCM,data:HofAB2BB+VBZGEONbXJMgxCTeHkFpNe8VhQWDZIIosQlGzY3eDT3j57uCpLHFvWFWeosJzVoVSC5NviL3CP9QHrpO8mykXSkuJzhWsOmFe39PQv0N5i9vzk5We1qszkyJWOqhsT32l8G7hFEW55amMTDFYQDZONnG9KciCP+fuQ=,iv:k9YJ1SFEnUvKEm7ImTBkMWbUUnDPVd0VyBLw14A+k58=,tag:7EZ5HL7tndbX7M7g5ECZdw==,type:str]
     version: 3.10.2
