--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,71 +4,71 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:Pn1xVv9QL8wlissD,iv:59BTSdf9LEA9suqc5sT78AggZZTrYLEqi+UWCKF5zH8=,tag:F7NpEY1YefDpHYB87yGAcg==,type:comment]
-    PROXMOX_IP: ENC[AES256_GCM,data:tBRxNwNCntCkpMw=,iv:yWB0zHiVvuG8BtPOZC2Nsp1CZEqtUaXQIe6WyeHa0L8=,tag:2c4Kq4gJ4Roa0Cxtsf3BEA==,type:str]
-    VIP: ENC[AES256_GCM,data:KhzIbzMaNE+LG1w=,iv:GeZQDZfwnqh/UA2lx6ANy9SNslaoAnxmMWzZW7hT2K8=,tag:NxRgThd3sXzeSNTxPf0jOw==,type:str]
-    MASTER1IP: ENC[AES256_GCM,data:WWgS/BtZM9dT0R4=,iv:8tTG79z5H0XFpOELu+Lx2Q2dJImWvLlAyaujWwxyNwQ=,tag:5vx8T2w8k5dXzCx18T6O5g==,type:str]
-    GATEWAY: ENC[AES256_GCM,data:jNuJw9fOutRUAQ==,iv:FwFE/Un2/pLegyzYQS1N1V9GszNoeoaAigdXhfEeXrY=,tag:g4Tu+A0YQ8CMNd8nZJbzpQ==,type:str]
-    #ENC[AES256_GCM,data:8PbQaNs6a8y/KBsSKbOn,iv:Nq/mh3v6bAjmLEjumw8QORho1lM/wJWrpdNoMb8XFkc=,tag:0WaJ+Fq/tInb3PwADP/LYQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:pimOFT6CCzZiaJEMVvqM5WCLwsWcUEu8ag==,iv:ufuOiP+pX9ZNFeZimDHt0WQd+sCkfCq4XnvuFyJE2ao=,tag:ZvXPoY9TMYIbcRQIfPRPNg==,type:str]
-    #ENC[AES256_GCM,data:HN5/hL1EBzJwXWMnpEr29DeRBGnPU/JpLQ==,iv:58wyByJpvn+RdY6xBi8tm/xRJ8ANjfzZgDNjnNcWLlQ=,tag:ckQ9Q3/qccoFZazzIsh/tw==,type:comment]
-    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:Zt9h0Dc1hEixUghz,iv:WtCqLPhjWOFnnGwP0I5eIUFveuuJXnPL5LlC2G+cdoQ=,tag:jnTinkSNN2v5c6ztloVm5w==,type:str]
-    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:xJuSJbC1GhN/ZGi9,iv:yb/oFn4HDZxh3HFUumeq2I1o/5kF1fQM4VWpeRApSWE=,tag:gXIRV0AHXVvPz6NBzSlKdw==,type:str]
-    IP_WHITELIST: ENC[AES256_GCM,data:H7IHB3YPwRDJfF2bruKQA/wAV6RIwX4sRe4=,iv:pxW2DKsaLR32h4UJatLQ03U4I+qN74hWGi1DcURwmvo=,tag:c2BfzVjS9IZNJiY9EGX+eg==,type:str]
-    BLOCKY_IP: ENC[AES256_GCM,data:nUyAZGYtmTXzRaLc,iv:j4vECGpX7V6rYjcIaW5S39wSUI+tGCoxIYnC/Wm5mDQ=,tag:8XuQOEUoU0S/EbvrJ94CXQ==,type:str]
-    DASHBOARD_IP: ENC[AES256_GCM,data:TOuTgqZmgHf3m1l7,iv:W6Vemb82URDhuOcd/cMNVg1BvTMU3U+f4Uga8qlw2I0=,tag:1tWjXLjFozdzMbaWcbjPRA==,type:str]
-    WG_EASY_IP: ENC[AES256_GCM,data:Bm58w9FsCTwy2TX9,iv:dh3pYNsTyGNRhCVwL1c8mYoNXX7H9micdNrAR/asaow=,tag:Q4eDHDId/bsQiMFGBSChaQ==,type:str]
-    MINECRAFT_IP: ENC[AES256_GCM,data:3B0esGa9s3p41a3b,iv:+oZGevwTDJ//6yIJVuv1rmBWw+XdAA6rnjtEnEJh07s=,tag:X3LZUH1uWYkVtCj9U9AWrg==,type:str]
-    #ENC[AES256_GCM,data:MrV3q24NTGJ9T7S+bhzy2WdK,iv:cIIzddfjOvxbZDh4Yt0uECWgPTH1AUdmwr344838ghQ=,tag:xPzB7ne1cQmkeCrgYnqpuw==,type:comment]
-    BOREALIS_IP: ENC[AES256_GCM,data:bEgEUgYXBcWFYc8=,iv:niITSkhjf/P1kzyD79plQWPsOV4j0YR3FinqSot7IaQ=,tag:spFO1+2xJIQh4R4LmDG1SA==,type:str]
-    #ENC[AES256_GCM,data:zQoDyw9Ou/msPQDBZfo1kQ==,iv:mWsm9+y/tIzvvLUJtUTFqw7+LJ9bf2sgbNX/4dqzYlg=,tag:Y13G3+RXYX65wfWG3AJUKQ==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:+vQesMBamlekb8l4CA==,iv:cDehv0eGuYmlCI+wg4Hbnp2NhZ8klmcikIMeUOwgTBU=,tag:ZquKn7QdLpwX2Ccpk6EwRQ==,type:str]
-    DDNS_URL: ENC[AES256_GCM,data:eIhCyz7Cn3QZP8gGD4qh19iqNEo=,iv:zhKjvN3dNkNoNplKzsxfqXJon/sVyPjwAVjkp7y65kI=,tag:1qSDJLg+KaKThroP9KuGVQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:DdY6UIPlkuO2A3e2DT3lv7FouQ==,iv:fUZCkkuYg661yOZr72ke8+4mX0j3E+2UL5hA0SDgaVw=,tag:ONq8w1OdXb+FogQqeZrQYg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:1tP9TA7KhDtvqhnkQH0H1H34jfwBhxHYPI8hNP7l2OjPpHDjGFQCDw==,iv:otP9837jR2Um3gk1ohxQt55BhKvgYlYl1UWtdQX+Cns=,tag:ZnW+FmVMeQiLWddOXp8Qkw==,type:str]
-    ZONE_ID: ENC[AES256_GCM,data:XZoOEv8SRRv6N955vmJ6sjsCAkdTN1x6AtxDBrLT6GI=,iv:6TzjwM2lns4TDmdtIP6/P9kFoY6Ogh93LYbdrhyzM6g=,tag:Niw05O+8Bg6SR1jODMgJyw==,type:str]
-    #ENC[AES256_GCM,data:7iYUNB5Nlms=,iv:XJIvSX9/WOP8FohEsac3g2jMT0hH+wZgC/9u6TTGBaw=,tag:rf51HMENLYBOgdkd5LyLiQ==,type:comment]
-    GF_ADMIN: ENC[AES256_GCM,data:/OQo6kIJ3Kjs,iv:0BMu4JU2quvpvoxO3hrfu+l7MCfb6UkdP4sLx0WD0Ro=,tag:PwjNdjUhn0znUXqnNDAQRA==,type:str]
-    GF_PWD: ENC[AES256_GCM,data:wBjMIViSfrnI7G5Kp4O56PITMgvNeX06,iv:YRXkZTcQ2E65kd/vy9V4ygq3f4MJwPNp7ZSVG627TBI=,tag:/XW1STaUmpv4i+xw88Fu9g==,type:str]
-    #ENC[AES256_GCM,data:9T4OgZeG6aoCzg==,iv:fFouQufRbNQRTQ+qBr6ZJSvBGj151OTinHqjRI2a25M=,tag:kA9C256TrxXevxsKKw+Swg==,type:comment]
-    NEXTCLOUD_USER: ENC[AES256_GCM,data:VkNoTyHTm/9x,iv:BQ2eHcN4GvxhT8t8f67OasgE3LXHskl6A5Pv7mBMELQ=,tag:i19zb5EsTV0kV87kyelmYw==,type:str]
-    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:7KK3z/N9ZdiyLjqvyxGp9CaqLYg=,iv:pDlQz5i7Vjf/7rC/oSxXL85yrkGAhJ88GDmRaokOU90=,tag:OXnITHCVeOtXMOuyTL/9/Q==,type:str]
-    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:1e0NP4GqikWF7Jc1xCkmckF5n6bL1B0g,iv:J2h+Ha5jOqeE1OfMvnjgt6Xq4WP81f4XO+yHH10p4j0=,tag:W+4aZwIgWVg6wg7TD8PiqQ==,type:str]
-    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:nXBQNNrXeRx3vAqPU81aacyMNg==,iv:VL7TqGv8VXVDBYlmvzoqV0QUAwWDJUOLfC70aMn7D/s=,tag:ERn4Cy2pxnhFesv73tXnjw==,type:str]
-    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:N7zH21fEnxwzZYYf9M3p9nvY,iv:WpjAUO7pdJN8tju8cyNaYRhUQIRuVHvp8jsiYOu1Z5g=,tag:zg2q4+Z2QavSwnOp9Wdtag==,type:str]
-    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:2ExjpQe1tql85zFAQIfAsuDtfTIsFeY=,iv:sCMzGMc+9wV//wIN1Bjhjn3yGLcrRFNfFxtOi+URQwk=,tag:7LM0ymZh7PVF2geHmgIxJw==,type:str]
-    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:fJ56qE5ai+h2fcnPqql6z97H0/1J9NkR,iv:EPtUJhw+oQ/iHvMBGgIS2YweX8oFMEfgCl3DgPcw9io=,tag:dUKgk2GMur+Jm8BcNiHPpw==,type:str]
-    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:4vtYAXQFTdFU5OWtFTHKlLhs8do2hEwh,iv:TTzUoL4pai6v5jOppL27eWyBlsCbspM5/BxHDKkEQuA=,tag:pGMTZibrADkYvnaQ/lUmbw==,type:str]
-    #ENC[AES256_GCM,data:p8wjmsz2tyOj4DAwTzt4w5U=,iv:YbZMsLyHVmOKjyFGHQUTjwjmHh8jT/5EqcEYuBM4Boc=,tag:U38azUOLf8LxfdrqqOI1EQ==,type:comment]
-    METUBE_NFS_PATH: ENC[AES256_GCM,data:dyGLDQwqzmNK0nYbB0GmVnfNmNT8bYIUviU=,iv:FgbCTATZSq/u987DS5tfU4qSN1LIp1ZS8vgKedPFAo8=,tag:LVJ1Ad4Tp10kCP+p7MwfAw==,type:str]
-    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:voFe4tDSN7jQGEW1qmZYA59ApfofA1ds4jmcjTXbmsZiqiObrgCH,iv:MMkUHEJIz1AINK8Nfup6t4Z1BUSt2Yscu55OHro4+Nw=,tag:VY+Vt9SnHHyKht/jpL4TQw==,type:str]
-    OZRATES_NFS_PATH: ENC[AES256_GCM,data:ZdEQwWfJeeFiTdWowvzwVCxaZMqP0MRVWYLuGHY=,iv:Ks4iDs5VcjUhTRFqIczjMaxHopEHWR7j48rXCijcKBA=,tag:s8slCrcA+/OWnsGAGtc4CQ==,type:str]
-    FRIGATE_NFS_PATH: ENC[AES256_GCM,data:d7XX205iq9btWhynOA6krPGgnfe9xyQ=,iv:gHDR1gOr5SdJFQV/8knSfchDOpfuikw0+LG6VOvsbDw=,tag:tIkvxQZjgGrXUuSNtjwgmg==,type:str]
-    #ENC[AES256_GCM,data:a7pCb4rti1wf5xwQVu6nWNH85XIA0wqLgHeui3IMMLpRmW++UWKUVj/6gl7I/uDdZ28ElqdLp5M=,iv:nbFUnwi98uhktj+rkw4TDZoa1BCRk1SKyXvVbwRQ/Mo=,tag:J1XNqZUxb5dBDWODgIIFbg==,type:comment]
-    #ENC[AES256_GCM,data:r8HVn+gaxQIYx54Y6+YWUehJk7PmgdTjuw==,iv:/NQqE9gKSn1HqARbFpBjMZxXro8kKTVOSzxwURHvsYA=,tag:NH+9IdNhCjVaEIHhoo37fQ==,type:comment]
-    #ENC[AES256_GCM,data:CjUSVuIuGPNOcgg4tieIYpX8a32gKGeA1m/Oj9ignfPRzMZfJkEUGM2to7C7F4WGdoCLIkXvvoypVeWw1WxQIIpq7uP5BG8YiEs+OAY=,iv:8DjJzLqVXOcy6tgkER78WYuLn0uMT6rgNlf61jWEPOk=,tag:cUYMwP8EVgAakReboaUo6A==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:L4hNPImuOyK6BOXJQlBAfUXB+IEuJh33C84nWlkEjcx1A8VMiDQUaz/KkA==,iv:2nv2bBMLoB2aD21W1G7okaEeyCB7UJZ0BBB3FX2lZO0=,tag:hcgu70eaOET7x0GeAGknAw==,type:str]
-    #ENC[AES256_GCM,data:nVJEnDlfXpck50xpzz8OyoozlX3ihUFlqMjgZMkBJQ5wO3DRJkAZgy6xGJ7Sumrn7pbQIXQukcqB4kricFZFvdPesYqsBVg=,iv:r9945kX0ZBbGzuc8HbMpHaUVv2LxXD1JtegaeXv1UOk=,tag:Gacak2lIrRMeBZ4i2o062Q==,type:comment]
-    #ENC[AES256_GCM,data:3aLbobr8zVqoIQiMH3YxMH1g1MDuBTD9gg5nct0Lv4TIfOKFTUOuDkVUbo/daCoyvQgvqq8Y,iv:7sj1mm0jUgZ8keo1nLDpBOKrdG3rB/vjzB2V+SbdYAk=,tag:ZJKkI1fPRC2iBcS9/tlW3A==,type:comment]
-    #ENC[AES256_GCM,data:SvKT25dsLUCnLU/vq7C6Hx3PM+8B+//xUIxYuYoh0agzGE0=,iv:KEGzsbhTB4xSibmGYNFA/z0gtH23B5kf6MsVjhtieB8=,tag:ZhbArtDI2bXUtgBmX3+J1Q==,type:comment]
-    #ENC[AES256_GCM,data:D4ZdnFev0bbhnCvNp13w5zJ1FkbGtWe1nTlcacJ8EN0yDvMTnvRj,iv:ghoc0ejlaSpmDtjxI429UjUQIaYZ9qXHmdT5yEqpCuE=,tag:1FqnffFKQ5zRUjjTt6/Wyg==,type:comment]
-    #ENC[AES256_GCM,data:Kmm6ffohVLCer6MzTFo=,iv:YQWfYmFcRXDLW0nf0qfZ0SiS7VvU5vrZNhkkvJ2NwB4=,tag:HVZ07gYag27joG4CuSNFMg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:Z5uoaxZeQhlASHcvEA==,iv:/lomaRMk27kTNpd8DCtC9dvaGZfDv7GUrbY/FXbmatE=,tag:h4FPnsjsYc3zGZXIEqMQjw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:dPcNQXvlFJ0Zg2NFiQ==,iv:acIFgAhZLl2fXIaOTOIrSFxy5j6xHox6GL/TyFPo3mY=,tag:VjwrrDU65pLUxegZumCvaw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:iFX/AQ==,iv:uuLg/aStkbCqr/ee1sQpVEMv21llwgY5zcm0k+M0tqY=,tag:SF4vtLhIuWaOHWuRBITtdw==,type:str]
+    #ENC[AES256_GCM,data:EtSO7zdiATwlKYm3,iv:NeYsfx0ZQ4owOHFQkfkBrw2rGYpz1jLtJHDQnjGG1Cs=,tag:3lTJ7y8aU9sCZ3crAfkWhw==,type:comment]
+    PROXMOX_IP: ENC[AES256_GCM,data:7lqRgj5Cs4x1vHw=,iv:5WIZP7XGoF24wrW8pZfu4aQJlahr4x5TL4zeDjHF0kg=,tag:tIrLd4opfquriip8xDH+qg==,type:str]
+    VIP: ENC[AES256_GCM,data:5zZjFqglD4yjJEY=,iv:bMZnuSN+xPuRGjx4xbilnSMklT6j4bMCNJ709xgXJ+M=,tag:fb4tlPHlWTUYZnLjVejW/g==,type:str]
+    MASTER1IP: ENC[AES256_GCM,data:8yUZwjS67FE+YKU=,iv:kuCcyBkiO7CYIqpKKZOYvLdds2GTU8kbWMp8Y7Vx5co=,tag:ywyLF8pKy3MTYOTvjZcb5g==,type:str]
+    GATEWAY: ENC[AES256_GCM,data:wXNqfoTBa+OplA==,iv:E60NwQnDNDZd7lzX8NX5abkgVlT8GChPRpqByb82LT4=,tag:FgyNzu7oWttk0dmQ+Re5wQ==,type:str]
+    #ENC[AES256_GCM,data:h3mCxxjb322JUEG1OmEo,iv:ehWSnweiZGnmw/R3rndbHS4FMBLlgypkk9oBjM6PMXQ=,tag:ZABYxjRDwxuj1f2kCTQptg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:CdXLK7ORGU/RjUZC8q+OKe+Nl0nvzkqC/w==,iv:rl4+/kchKf7btGHUzG89/vADRIPs7klob0k019Ui6Lg=,tag:csQX69OlV4K1l/iFMIN+lQ==,type:str]
+    #ENC[AES256_GCM,data:tmbqc9X0Vs6DGbbggcvHZonBxorxQli0sQ==,iv:Bl0OT40oW8pAgQYzOkHlHcaKrlKez9yVKst42h96yDw=,tag:OnZWhss14VdamjE0cInkfQ==,type:comment]
+    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:Z16xA9Rkab5NzbGz,iv:X8UQiD6+yOcF5ExugULOnC3vFU617yl9HHYfxJQ6Xkg=,tag:Nxid4E+e6jtBFIL7jXRDSg==,type:str]
+    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:nyUOehWn+Kd92g0t,iv:4enGpUU26s97a+do0TzhCDozZxcdiZiRg1hsdoQruYI=,tag:G2mERWidqJKvdrDfMn2GWw==,type:str]
+    IP_WHITELIST: ENC[AES256_GCM,data:h1o3pCtITQr5vxd4SnNE+4gzTjroipSR1qs=,iv:LhSmV+EWLAIBNlXv6sjsD81J34JVm2KZCbgqdcjHY+E=,tag:AQJv3IrVkWAeG9lm4cmLNA==,type:str]
+    BLOCKY_IP: ENC[AES256_GCM,data:f+Gu0OBMn/jKs72y,iv:vO1VOj/z92pQGZA7cZOpqeQxp9v1u/wfu6d6/h6ME5w=,tag:g9dIqoKtKWUJT6LEm+GLaA==,type:str]
+    DASHBOARD_IP: ENC[AES256_GCM,data:xwIgPAxKsO0dLXS/,iv:GTN5RrHxXvg4rFpPVCWrLmtHQr50R7JLo/2dWa2sWbg=,tag:f4Gz5pWA45cvUlanHUhrpQ==,type:str]
+    WG_EASY_IP: ENC[AES256_GCM,data:T/sG+QKQMw0Q8t+b,iv:TeutcTLvZEGgkztTkMjhUO0MRbq/81zbZKdjAVjHmX8=,tag:LEQZ9MlhlZyqIQNVVADMIw==,type:str]
+    MINECRAFT_IP: ENC[AES256_GCM,data:7bDoioJHGrcIYFfB,iv:NIBkK9YmlnWOxmrRe8cEgDjRoXnCBBTp36vpfobjB24=,tag:q0VF5P8t0zLJWcz6VnKMqQ==,type:str]
+    #ENC[AES256_GCM,data:4XJgAmSm60r7+5IUR+tgTIqc,iv:t8ZpH1WOyQeL0l0HroaFHaS7o8kWCS7sEcfgvCRSnHc=,tag:t3hW/vrJxaHPlG20qngCGg==,type:comment]
+    BOREALIS_IP: ENC[AES256_GCM,data:oNQwbapVXlTl494=,iv:dLVdMX5jzgV8nJeasFX8hGflHJn3BibWBw6MA7DQQhs=,tag:eqFpx++z/A19nHOyh90aIg==,type:str]
+    #ENC[AES256_GCM,data:XCpzQfmGub+PE3jp2qYUrQ==,iv:blkTs3z2Eb02W3ZAPzABEBUqITWf/MeGOuTNQYbyd8w=,tag:nI4esMvgasfCVP9X9JSG3g==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:oWTJfKI45v7GL/awsQ==,iv:RcPkPo4J2cVVGPkYv3I8fbher0rAfm1jaABdFqGnY+4=,tag:7WV4CgQBpRUS9F6c2wGa5g==,type:str]
+    DDNS_URL: ENC[AES256_GCM,data:77AVJueH2s2fwsvhbaMQWgKSn8o=,iv:ZXkHLiIIhqq6imTEeo6Ejpk/Gi/IrfSsUlp6UZ1ybek=,tag:FE0UypLY5wLitBhGHScD9Q==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:mX/4aBcctuCIW5cJZu4npAhdDA==,iv:aggGvIq4/aPYjbISNfu6KkPmsu4TC2OmD/wTqGBkx3k=,tag:Fejdb7J7Q6uXpltkuOBNLg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:hRDQFVtE7WolCP40WRpolIliO0DnLt+jX/Sir0xiSYylzMoF9+viSw==,iv:7yUxGx/zUzUtiykPjT3lclpEPQ4FodvL8tKgWEMNkBc=,tag:DlRSdpOBRJ2Csxq1udoYfg==,type:str]
+    ZONE_ID: ENC[AES256_GCM,data:Wqr/kna+D14N1W+RQwBH6ulej7nPLtKDxGFoassdtxw=,iv:gtv+3ewUI4cfqK68sY0I07u36P9lgv/jXIBC36SAUIU=,tag:y9pYUNB1OMcuc7hXmat3YQ==,type:str]
+    #ENC[AES256_GCM,data:mCkH1lJZPMc=,iv:++AGktwESuK3ZJLrnx+2HYgdhkCuW6itKqT6ZfazMN4=,tag:9bfkc8Uv1hIYotz2h0kU9w==,type:comment]
+    GF_ADMIN: ENC[AES256_GCM,data:Pd+nUfqdCvk0,iv:e1UeM9xGQO31SsIR52i8IrkntfZ/Wv0MWQN114wZfro=,tag:SsKnHP2o/jJLXJA1N45pMA==,type:str]
+    GF_PWD: ENC[AES256_GCM,data:19mlg53N+4W4Plc54MkuS1dF2f9EYx1j,iv:inmTiotX9rzaICHe7wMpTq23g4sOsZKp3emXLNqS8fs=,tag:QuZGo461bekMFQigMYhFuA==,type:str]
+    #ENC[AES256_GCM,data:7hKq8oLKyeG97g==,iv:7caVVuZll3P2CJYaeyVxYsSm6yoPqtpcfCl9mp5+ZnU=,tag:2zk5XPiuYQBgVKEBDRbbhA==,type:comment]
+    NEXTCLOUD_USER: ENC[AES256_GCM,data:QzNNENkz44hS,iv:fufz4ipruOGda6E+sggOk5vbAqOZ36kHR7J1PlxqGro=,tag:c4Zec3nPM5MEGanUpdbFOg==,type:str]
+    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:MQ2Sn4XquqnxNEmmECC4KnUw+Ys=,iv:IQfac68PNCY8RQk6jzYisBS+tBrW9pQzOUcDFVHqbyQ=,tag:jFhA4wkdNUZRKbjk305VXA==,type:str]
+    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:ZiDu+7geve2snX7l6cXzWyRHKK2RTmat,iv:Pa1lM3rBfhXSw4/sQZXnM+X3WgPmHjvJYlOjVriV0xM=,tag:jmBt/p8QNPP5ZRkGILT6BQ==,type:str]
+    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:K0oEMpR8ZOt2+lGB2sn84XYc/Q==,iv:5q6guJtvTbSdf0770SxCPcMfSDDn0sEBB0QpNRHjITE=,tag:thslU9UOhNHktNsDvjhgWA==,type:str]
+    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:4KeMl1vMTrFLyozp8FQAHuhc,iv:KkCraxYi9xcy7SHqQLAGjnFf7yPUUtWLmQ7YQzUGmrU=,tag:l7UU79LyqjvU84fVTGe5bg==,type:str]
+    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:nYFhaUqbUBg58WvRNI1LEbDKmwGHRj8=,iv:tTJP2x03w5zt0x2/cOtZc50Mes0388/dfpXuBvCIaP8=,tag:vuCqitaaWX9n6yaIKz0XPw==,type:str]
+    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:MAiUfiQ5+q2EFR48fYiKxF/Bx4ODHtuH,iv:s7AvXCrZRv1y0D+s5LeEC8hAP9g/I6q7nGMlDCp875w=,tag:SzZ/UoDyfd5M6mk1tTz+RQ==,type:str]
+    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:OjjtAu2g5cUZyF4LMS0WMHF5SlimaLFW,iv:4WPtG0c02FOlayN5Yy6LxMhoT+nHu3TNBEmwKJgDyl8=,tag:PvTXUm3DH75ZI+O2Y+/yUg==,type:str]
+    #ENC[AES256_GCM,data:0RuueByvLTXAP9y6ilromVU=,iv:ch0gFgcLnOrDr5HIXBKOe+21BvLpI34tqdvsGIbtAoE=,tag:CM5ZLF817tkbBLQKIJK1iQ==,type:comment]
+    METUBE_NFS_PATH: ENC[AES256_GCM,data:KiU++bDV0yEeZYVEid8igJCy1SleGigsbE4=,iv:JGIbaFyjlU5fAIbE+jQIjGdAEmNL6j42e7m1IBhr8NU=,tag:1IB78ng/44OUeW0PhEBMCA==,type:str]
+    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:iWTlb7FimtcgeqKU9gp4HLoYowNChHTbwKctlyzAjnfQ0W4RAbIn,iv:xfXxg1kDXmFv61WjpT6Ri3CbyIT5RxpTdLEHOyIYL9A=,tag:lkqvRRkyFngY7+h2Eylsyg==,type:str]
+    OZRATES_NFS_PATH: ENC[AES256_GCM,data:WRuPvkdtnqVk+uFhsUDAlckm5eRUyDPLHvsekEY=,iv:bG/BpuS5KAQgq+TFkBJF0E8Ax55oAfSEhx0Gn5Jza18=,tag:/p4Kak4XPeKKmMMkbPciSg==,type:str]
+    FRIGATE_NFS_PATH: ENC[AES256_GCM,data:6slfhi5VajeppM4gGPHrzL1l7XcpZ8c=,iv:SN/43pqX44BcwEU+HYChoBw3OhOQMoYfGlXhHsXxRqQ=,tag:20q/n11elHPANirgDn+5nA==,type:str]
+    #ENC[AES256_GCM,data:8DmxH8SO0eBgFreAp2AS9kWqMFlA0R2KUE5jJBvjhvgmwdBvymJoHBL+cJt3pg9wTwCAZarIYpo=,iv:/xMX8JhQuS+ojuEtCbBEgOMI6JdMP1SGiRDt9da8ZAI=,tag:eDzgX1XNrXYru8zIU3ut3A==,type:comment]
+    #ENC[AES256_GCM,data:Rl59FcWv0g2Foi6B2ZNjqTeClJD/kf92dg==,iv:y+BfN3MGONuvOwGtlpTF/i5yE7KAorUoXHVMQrPa0Rs=,tag:3ZdTXUEhx++VgAKsxtxWXw==,type:comment]
+    #ENC[AES256_GCM,data:UF+TJfCDxb/gbZfWUU/wZoGey04Ups4n1L4WhAw2eiaLrH05IQvz5PAF4fsGQIPQWE3PgDrTEss2YOyfdMGe9xfcn/IWTTx5I2NmC4M=,iv:I0Nxenq0oZ5roNaZW2rY3qE8PXCo/biZYk4dzAxL7h0=,tag:G7wLU2X8bqcy745K7mDcjA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:4F2LjFiVh+7I9F+y8pVPy6R23JdDP+fEBJmZPzvmVWbf4f73bymPwhoarg==,iv:qu9IcFH3sCqenBZEQQTzp9pBYTffxfE4MB3FS7RrT8U=,tag:tS3s/JBrO2PDUOolFzirog==,type:str]
+    #ENC[AES256_GCM,data:TRWg11zfeH/mpPvmuslngdIVVLg82ugnovQ8MKl8QmppS3yBPKA2ELRM8mLM1OeUu2eFpOB/M53X+lv5xoovKMf+S6zmiSo=,iv:UCLuuAivY1+mSVG/EpXWbXhu6PWeOr0OrqLbRwg1jD8=,tag:4nFxZhB9t+fqcYOxoUahWQ==,type:comment]
+    #ENC[AES256_GCM,data:7dEFNZpAiZ20RcwE8m99w4rb9HRLpdK09iRWOve1Askhxdhp8g81fDfWFwtCFvt88SrPQVM7,iv:3J2SUxIJuKs2edEQuqYtaHEAveeQgTO/5oOccCOhBR8=,tag:9lizEPBlFJNfgGOzZSx2Dw==,type:comment]
+    #ENC[AES256_GCM,data:bATxdEgX/FV5A9aLLaGH9A+Bz9tPtgA75auVUA4ujfun7WU=,iv:Qt1sBq0dgWfV/rAkzxAW00rxUYpDM6YIha3WTR4Jcdg=,tag:k3cXZfAtHUbP0mK3WC5CUg==,type:comment]
+    #ENC[AES256_GCM,data:iIQURpCy8cmytjIXLeGTcdGXwjEWkDqg4YEVL+kL0lz/WNGi09Ad,iv:R9oOR9sO+OLBfQY2Rdekitso+mqSoTVCqDSR8j2lNeE=,tag:CTf8ovuuoeEbA1bT5+3+JA==,type:comment]
+    #ENC[AES256_GCM,data:Bvd6v00CH215/t7+Lks=,iv:yPc2ulUvyacMTtaAJXu1E9L83fOFCHacN0xJPp4OZbQ=,tag:ik4ziD8kfY6kIjBYj/u87g==,type:comment]
+    PODNET: ENC[AES256_GCM,data:07x/3YS+Y65ouwbr4g==,iv:NIlgyZYJomamjfw9tee7jNpVO538n0td9rRGiU0E7ds=,tag:qr7CXqjHfaCDTYoCc1oY5Q==,type:str]
+    SVCNET: ENC[AES256_GCM,data:uolt0S2YO8FgSBR6Jg==,iv:kD+8cDxf0veM5RDbWMEGwX45caH8ihBlaHG+sRjYVnM=,tag:ySIKkcCYQknFEIMKIrxKhA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:s9Nyxw==,iv:NWO3PF/fRbFChXFIsHxF2/jLm/rkdVLH9DWvCRI5L4I=,tag:Gwt/PxPBCCSHh576Qphk/A==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBKTkE5NFZLRnJhUDNBaTF1
-            VWVVR0NlS3BjeEZtOWNQVTRRbVFIZ1ROaWhzCjF1N3J0aVBlcUZyT0UwbjFHNVNW
-            YXo1UjBTb3M5NnlWNWNBUmZNeTdXK0EKLS0tIEM4M1hFRDlFK2Q5N2p5c1dZYmxT
-            MnpkSitDd0hKS0pDc1ovbi9ScFBqT1EKmN6FPLV9eR2bgKR5eGjH8KDbc6vy0bIc
-            JnXch4o65rW+qbvWZr3zEvuO0Lpzj3kqszRG1ZQrny37QWBXxuz5Mw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSArbjRaV3o2SlZXdFFoNkJJ
+            WVV0Mm1NSEpWVEgyeGxRa2xZUzczNXBEL0JNCnhRMlpVNU45MUxOYzUxSEE1VWV1
+            bVpNQWVRSThqWDJXZHdDb1BpQUM2ZEEKLS0tIFlIWUJXUytTSmhpbDhQcE1WUmhw
+            Y3grdE9DZi9QeVpRTXBxRVZzaEloQlEK3NOtHEFZedZ2kDhS6rsBMqpcTJeYzt/j
+            2imK8c5LL54PuODLER83lJwAhzRTYfga3o5gTZtZLBaLg5CpvUCK1Q==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-28T20:49:51Z"
-    mac: ENC[AES256_GCM,data:R8ur2TSpYCU/RMZvGdFVfWm8WJ1abrkiT9FtszjrCVFU9kU3UcVgqT/CrCvK8tgZV3IHSwzdKoQClgsPUvIvixFCyF6PdJPZwWr2fdqA9geuqiTqR/ZDVDDPUGd2C66s5kUI5CwqXd356DDe9Lx4k5tnXMK3oBnnb/J+LFIY120=,iv:ZoZzqBKe9Wi3gaFoDgxjw5y/AZADp/N+9vZmvCTqZLk=,tag:HgQz6A3eWOzZ6DWInIt/Cg==,type:str]
+    lastmodified: "2026-01-28T20:55:32Z"
+    mac: ENC[AES256_GCM,data:MRI6DjeoL6mR5tFRvU6ASH3bE8e5q0ZXnbP5MgcaqgbTasqNHU+6N5qPyJcRA+VUP5PHiV5Wa9siv9WMOxwDP28Ohr0Yp29dAc9HPCwy6q724ROgvPP0uhwqnwBv5fKjExjkRAIJZs5Qg1mGsQyQJ9d7ywk1GgD/8E3HbYuIYoQ=,iv:8+YXuZkZV8vIYxcWEyJPmRNCFKhnfnFok7kVyeKLWRQ=,tag:ew9ZGaZcGY7V9Q+j04FyLQ==,type:str]
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.10.2
