temp remove frigate

--- a/clusters/main/kubernetes/apps/kustomization.yaml
+++ b/clusters/main/kubernetes/apps/kustomization.yaml
@@ -13,4 +13,4 @@ resources:
   - spoolman/ks.yaml
   - uptime-kuma/ks.yaml
   - viminariacom-static/ks.yaml
-  - frigate/ks.yaml
+  # - frigate/ks.yaml
